# jzon

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  build.zig  build_minimal.zig  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  data_generators.py  phase3_session3_benchmark.py  test_memory_usage.py  test_parsing_performance.py
bindings/: benchmark.zig  jzon.zig  minimal_array.zig  parser_fast_validate.zig  tokenizer.zig
experiments/: __init__.py  binary_decision.py  extended_analysis.py
logs/: 20250122-1900-state-machine-architecture-milestone.md  20250122-1939-state-machine-architecture-milestone.md  20250722-1939-state-machine-architecture-milestone.md  20250722-2209-critical-issues-resolution-milestone.md  20250723-1933-benchmark-implementation-milestone.md  20250724-0552-test-output-verbosity-optimization.md  20250724-1115-comprehensive-log-review-roadmap.md  20250724-1530-phase2-tokenizer-optimizations-completion.md  20250724-1632-phase3-session1-zig-tokenizer-implementation.md  20250724-2139-phase3-session2-batch-tokenization-completion.md  20250725-1400-phase3-session3-zig-integration-architecture-complete.md  20250726-1656-zig-binary-decision-experiment-completion.md  README.md
src/jzon/: __init__.py  _utf8_mapper.py
tests/: conftest.py  test_decode.py  test_dump.py  test_fail.py  test_pass.py  test_pass1.py  test_pass2.py  test_pass3.py  test_placeholder.py
